--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-        <span style="color:white;font-size:30px;">Devlop By Er.Rahul❤️ Anchal</span>
+        <span style="color:white;font-size:30px;">Devlop By Er.Rahul❤️ </span>
         <script>
             function demo() {
                 var a = document.querySelector("#t1")
